--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -7,6 +7,8 @@
   --md-default-fg-color--light: #999;
   --md-typeset-color: #3c3c3c;
   --md-typeset-a-color: #ff0000;
+  --md-default-fg-color--lightest: #00000025;
+  --md-typeset-table-color: #00000025;
 }
 
 [data-md-color-scheme="icij-light"] .md-search__input:not(:focus),
@@ -25,10 +27,11 @@
   --md-default-fg-color: #fff;
   --md-default-fg-color--light: #e9e9e9;
   --md-default-bg-color: #1c1c1c;
+  --md-default-fg-color--lightest: #ffffff25;
   
   --md-typeset-color: #fffff;
   --md-typeset-a-color: #ff0000;
-  --md-typeset-table-color: #000;
+  --md-typeset-table-color: #ffffff25;
   
   --md-code-bg-color: #000;
   --md-code-hl-comment-color: #3c3c3c;
@@ -37,7 +40,6 @@
   --md-code-hl-name-color: #fffff;
   --md-code-hl-operator-color: #fffff;
   --md-code-hl-punctuation-color: #fffff;
-
 
   --md-admonition-fg-color: #fffff;
   --md-admonition-bg-color: #3c3c3c;
